--- a/mnist_vectorization.ipynb
+++ b/mnist_vectorization.ipynb
@@ -23,8 +23,8 @@
     "from mnist_cnn import cnn_model\n",
     "from new_defense_mnist import *\n",
     "from visualize import *\n",
-    "import os\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"3\""
+    "#import os\n",
+    "#os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"3\""
    ]
   },
   {
