--- a/mnist_bitdepth.ipynb
+++ b/mnist_bitdepth.ipynb
@@ -22,8 +22,8 @@
     "import numpy as np\n",
     "from mnist_cnn import cnn_model\n",
     "from visualize import *\n",
-    "import os\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"2\""
+    "#import os\n",
+    "#os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"2\""
    ]
   },
   {
