--- a/mnist_quilting.ipynb
+++ b/mnist_quilting.ipynb
@@ -24,8 +24,8 @@
     "from new_defense_mnist import *\n",
     "from visualize import *\n",
     "from defense_quilt import *\n",
-    "import os\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"3\""
+    "#import os\n",
+    "#os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"3\""
    ]
   },
   {
